# yamli-editor

./: .SRCINFO  .gitignore  Cargo.toml  LICENSE  PKGBUILD  README.md  config.toml  debug.html  yamli-editor.desktop
.github/: dependabot.yml
.github/workflows/: aur-publish.yml  ci.yml  copr-publish.yml  release.yml
src/: config.rs  main.rs  themes.rs  ui.rs  webview.rs
