[package]
name = "yamli-editor"
version = "0.1.0"
edition = "2021"
authors = ["Ali"]
description = "A native Yamli editor for Wayland"
repository = "https://github.com/ali205412/yamli-editor"
license = "MIT"
keywords = ["arabic", "editor", "wayland", "yamli", "gtk"]
categories = ["text-editors", "localization"]

[dependencies]
gtk = { version = "0.15.5", features = ["v3_24"] }
webkit2gtk = "0.18.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.6"
gdk = "0.15.4"
notify = "4.0.17"
glib = "0.15.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[[bin]]
name = "yamli-editor"
path = "src/main.rs"
