[package]
name = "yamli-editor"
version = "0.1.0"
edition = "2021"
authors = ["Ali"]
description = "A native Yamli editor for Wayland"
repository = "https://github.com/ali205412/yamli-editor"
license = "MIT"
keywords = ["arabic", "editor", "wayland", "yamli", "gtk"]
categories = ["text-editors", "localization"]

[dependencies]
gtk = { version = "0.18", features = ["v3_24"] }
webkit2gtk = { version = "2.0", features = ["v2_38"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.19"
gdk = "0.18"
notify = "4.0.17"
glib = "0.18"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[[bin]]
name = "yamli-editor"
path = "src/main.rs"
